[tool.poetry]
name = "mock-watcher-server"
version = "0.1.0"
description = ""
authors = ["Teodoro <matheus.teodoro@xfel.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pylint = "^2.17.0"
poetry-plugin-shell = "^1.0.1"
asyncio = "^3.4.3"
websockets = "^14.2"
watchdog = "^6.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
